example/secondfile/objects/Class_Of_Service_USOC_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>AVPN_Class_of_Svc__c</fullName>
        <label>AVPN Class of Svc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MIS_Class_of_Svc__c</fullName>
        <label>MIS Class of Svc</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed__c</fullName>
        <label>Speed</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Class Of Service USOC Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AVPN_Class_of_Svc__c</columns>
        <columns>MIS_Class_of_Svc__c</columns>
        <columns>Speed__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>USOC-{0000}</displayFormat>
        <label>Class Of Service USOC Mapping  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Of Service USOC Mapping table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>